objects/Rental_Order__c/Rental_Order__c.object-meta.xml
<CustomObject>
    <label>Rental Order</label>
    <nameField>
        <label>No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rental Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>