objects/Rental_Order__c/fields/Bill_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bill-to Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rental Orders</relationshipLabel>
    <relationshipName>Rental_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>