objects/Rental_Order__c/fields/Drop_Off_T_M__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_T_M__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Drop Off T&amp;M</label>
    <referenceTo>TM__c</referenceTo>
    <relationshipLabel>Rental Orders</relationshipLabel>
    <relationshipName>Rental_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>