objects/Rental_Order__c/fields/Fleet_Number__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Number__c</fullName>
    <formula>Resource__r.Fleet_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fleet Number</label>
    <type>Text</type>
</CustomField>