objects/Rental_Order__c/fields/Last_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_No__c</fullName>
    <label>Last Invoice No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>