objects/Rental_Order__c/fields/Pickup_T_M__c.field-meta.xml
<CustomField>
    <fullName>Pickup_T_M__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup T&amp;M</label>
    <referenceTo>TM__c</referenceTo>
    <relationshipLabel>Rental Orders (Pickup T&amp;M)</relationshipLabel>
    <relationshipName>Rental_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>