objects/Rental_Order__c/fields/Pickup_T_M_Line__c.field-meta.xml
<CustomField>
    <fullName>Pickup_T_M_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup T&amp;M Line</label>
    <referenceTo>TM_Line__c</referenceTo>
    <relationshipLabel>Rental Orders (Pickup T&amp;M Line)</relationshipLabel>
    <relationshipName>Rental_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>