objects/Rental_Order__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Equipment No.</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Rental Orders</relationshipLabel>
    <relationshipName>Rental_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>