objects/Rental_Order__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Rental Orders</relationshipLabel>
    <relationshipName>Rental_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>