objects/Rental_Order__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Center</label>
    <referenceTo>Service_Center__c</referenceTo>
    <relationshipLabel>Rental Orders</relationshipLabel>
    <relationshipName>Rental_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>