objects/Rental_Order__c/fields/Site_City__c.field-meta.xml
<CustomField>
    <fullName>Site_City__c</fullName>
    <formula>Drop_Off_T_M__r.Site_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site City</label>
    <type>Text</type>
</CustomField>