objects/Rental_Order__c/fields/Site_State__c.field-meta.xml
<CustomField>
    <fullName>Site_State__c</fullName>
    <formula>TEXT(Drop_Off_T_M__r.Site_State__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site State</label>
    <type>Text</type>
</CustomField>