objects/Rental_Order__c/fields/Site_Street__c.field-meta.xml
<CustomField>
    <fullName>Site_Street__c</fullName>
    <formula>Drop_Off_T_M__r.Site_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Street</label>
    <type>Text</type>
</CustomField>